--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
     "morgan": "^1.10.0",
+    "mysql": "^2.18.1",
     "mysql2": "^2.3.3"
   },
   "name": "server-sql",
   "version": "1.0.0",
   "main": "index.js",
-  "devDependencies": {},
   "scripts": {
     "start": "nodemon src/server"
   },
